--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -22,15 +22,54 @@ body {
     align-items: center;
     max-width: 1140px;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
-header, footer {
+header,
+footer {
     width: 100%;
 }
 
 main {
     margin-inline: 95px;
     flex: 1;
+}
+
+h1 {
+    font-family: "Syne";
+    font-size: 22px;
+    font-weight: 800;
+    color: #b1663c;
+}
+
+h1 a {
+    display: flex;
+    flex-direction: column;
+}
+
+span {
+    font-family: "Work Sans";
+    font-size: 10px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
+    color: #b1663c;
+}
+
+h2 {
+    font-family: "Syne";
+    font-weight: 700;
+    font-size: 30px;
+    color: #1d6154;
+}
+
+h3 {
+    font-size: 26px;
+    font-weight: 500;
+}
+
+hr {
+    color: #b3b3b3;
 }
 
 /****** submit form container ******/
@@ -100,8 +139,15 @@ main {
     cursor: pointer;
 }
 
+#portfolio input[type="radio"]:checked + .button-input {
+    background-color: #1d6154;
+    color: white;
+}
+
 #portfolio .button-input:hover,
-#contact .button-input:hover {
+#contact .button-input:hover,
+#login .button-input:hover,
+.modal-form .button-input:hover {
     background-color: var(--button-hover);
     color: white;
 }
@@ -112,39 +158,75 @@ main {
     text-decoration: underline;
 }
 
+/****** modal link ******/
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal-wrapper {
+    background-color: white;
+    width: 630px;
+    max-width: calc(100vw - 20px);
+    max-height: calc(100vh - 20px);
+    height: fit-content;
+    border-radius: 10px;
+    padding: 36px;
+}
+
+.modal-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-inline: 70px;
+    padding-block: 20px;
+}
+
+.modal-form {
+    width: 100%;
+}
+
+.modal-form p {
+    text-align: center;
+}
+
+.modal-form hr {
+    margin-top: 36px;
+    margin-bottom: 36px;
+    width: 100%;
+}
+
+.modal-form .button-input {
+    margin-inline: auto;
+}
+
+.modal-form .button-input {
+    background-color: #1d6154;
+    color: white;
+}
+
 /****** header ******/
 
 header {
     display: flex;
     justify-content: space-between;
     margin: 50px 0;
-}
-
-h1 {
-    font-family: "Syne";
-    font-size: 22px;
-    font-weight: 800;
-    color: #b1663c;
-}
-
-h1 a {
-    display: flex;
-    flex-direction: column;
-}
-
-h1 a > span {
-    font-family: "Work Sans";
-    font-size: 10px;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.06em;
-}
-
-h2 {
-    font-family: "Syne";
-    font-weight: 700;
-    font-size: 30px;
-    color: #1d6154;
 }
 
 nav ul {
@@ -201,16 +283,16 @@ nav img {
 #portfolio form {
     margin-block: 50px;
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
 input[type="radio"] {
-    display: none;
+    width: 0;
+    height: 0;
 }
 
-#portfolio input[type="radio"]:checked + .button-input {
-    background-color: #1d6154;
-    color: white;
+input[type="radio"]:focus-visible + .button-input {
+    outline: 2px solid black;
 }
 
 .gallery {
